# interdex

./: .gitignore  Cargo.toml  README.md  compiler.Dockerfile
.cargo/: config.toml
ci-program/: Cargo.toml  README.md
examples/: Cargo.toml  deserialize.rs
ix-cex/: Cargo.toml  README.md  orderbooks_all.json
ix-cex/config/: binance.toml  binances.toml  bybit.toml  coinbase.toml  coinbases.toml  kraken.toml  krakens.toml  template.toml
ix-cex/examples/: account.rs
ix-cex/src/: error.rs  lib.rs  main.rs
ix-cex/src/client/: http_client.rs  mod.rs
ix-cex/src/exchanges/: binance.rs  coinbase.rs  kraken.rs  mod.rs
ix-cex/src/exchanges/binance/: binance_client.rs  binance_rest.rs  binance_wss.rs  mod.rs  models.rs
ix-cex/src/exchanges/binance/models/: mod.rs  orderbook.rs  trade.rs
ix-cex/src/exchanges/bybit/: bybit_client.rs  bybit_private.rs  mod.rs
ix-cex/src/exchanges/bybit/clients/: mod.rs  private.rs
ix-cex/src/exchanges/bybit/configs/: api.rs  collection.rs  database.rs  exchange.rs  logging.rs  mod.rs  pairs.rs
ix-cex/src/exchanges/bybit/methods/: account.rs  instrument.rs  mod.rs  orders.rs
ix-cex/src/exchanges/bybit/responses/: accounts.rs  balances.rs  connections.rs  instruments.rs  mod.rs  orderbook.rs  orders.rs  trades.rs  wallets.rs
ix-cex/src/exchanges/coinbase/: coinbase_client.rs  mod.rs
ix-cex/src/exchanges/coinbase/responses/: mod.rs  orderbook.rs  trades.rs
ix-cex/src/exchanges/kraken/: kraken_client.rs  mod.rs
ix-cex/src/models/: exchanges.rs  mod.rs  orderbook.rs  trade.rs
ix-cex/src/results/: errors.rs
ix-cex/test/: test_binance.rs  test_bybit.rs  test_coinbase.rs  test_kraken.rs
ix-cex/test/bybit/private/: test_bybit_account.rs  test_bybit_instrument.rs  test_bybit_private_account.rs  test_bybit_trader.rs
ix-cex/test/rest/: test_binance.rs  test_coinbase.rs  test_kraken.rs  test_rest_binance.rs
ix-cex/test/wss/: test_wss_binance.rs
ix-cex/tests/exchanges/: test_binance.rs  test_coinbase.rs  test_kraken.rs
ix-composer/: Cargo.toml  README.md
ix-core/: Cargo.toml  README.md
ix-core/src/: data.rs  decoder.rs  files.rs  lib.rs
ix-data/: Cargo.toml  README.md
ix-data/src/: clients.rs  data.rs  decoder.rs  files.rs  lib.rs  types.rs
ix-database/: Cargo.toml  README.md  collector.Dockerfile  docker-compose.yml
ix-database/clickhouse/: config.xml
ix-database/src/: lib.rs
ix-database/src/client/: entries.rs
ix-database/src/queries/: base.rs  mod.rs
ix-database/src/queries/orderbooks/: create_tables.rs  mod.rs  read_tables.rs  write_tables.rs
ix-database/src/queries/reports/: create_tables.rs
ix-database/src/storage/: mod.rs  parquet.rs
ix-database/test/: test_clickhouse_client.rs  test_connection.rs  test_orderbook_data.rs
ix-dex/: Cargo.toml  README.md
ix-dex/.cargo/: config.toml
ix-dex/src/: custom.rs  helius.rs  solana.rs
ix-dex/test/: test_solana_rpc.rs
ix-execution/: Cargo.toml  README.md  clickhouse.Dockerfile  docker-compose.yaml  docker-compose.yml  entrypoint.sh  indicators.Dockerfile
ix-execution/clickhouse/: config.xml  users.xml
ix-execution/database/: database.Dockerfile  database_entrypoint.sh
ix-execution/database/clickhouse/: init-ft-schema.sql  init-lq-schema.sql  init-ob-schema.sql  init-pt-schema.sql  init-sn-schema.sql
ix-execution/datacollector/: datacollector.Dockerfile  datacollector_config.toml
ix-execution/dataplatform/database/configs/: config.xml
ix-execution/dataplatform/database/scripts/: database_entrypoint.sh  database_setup.sh
ix-execution/dataplatform/datacollector/configs/: datacollector_config.toml
ix-execution/dataplatform/datacollector/scripts/: datacollector_setup.sh
ix-execution/dataproducer/: dataproducer.Dockerfile  dataproducer_config.toml
ix-execution/signalproducer/: signalproducer_config.toml
ix-execution/src/: lib.rs
ix-execution/src/client/: mod.rs
ix-execution/src/queries/: mod.rs
ix-execution/src/queries/features/: create_tables.rs  mod.rs  write_tables.rs
ix-execution/src/queries/liquidations/: create_tables.rs  mod.rs  read_tables.rs  write_tables.rs
ix-execution/src/queries/orderbooks/: create_tables.rs  mod.rs  read_tables.rs  write_tables.rs
ix-execution/src/queries/signals/: create_tables.rs  mod.rs  write_tables.rs
ix-execution/src/queries/trades/: create_tables.rs  mod.rs  read_tables.rs  write_tables.rs
ix-execution/test/: test_connection.rs
ix-execution/test/misc/: t1.txt
ix-program/: Anchor.toml  Cargo.toml  README.md
ix-program/programs/ix-program/: Cargo.toml
ix-program/programs/ix-program/src/: lib.rs
ix-program/programs/ix-program/src/data/: data_feed.rs  mod.rs
ix-program/programs/ix-program/src/errors/: mod.rs
ix-program/programs/ix-program/src/instructions/: compute_features.rs  fetch_data.rs  initialize.rs  mod.rs
ix-program/programs/ix-program/src/state/: ind_data.rs  ind_features.rs  ind_params.rs  ind_results.rs  mod.rs
ix-program/tests/: ix-program.ts  test_fetch_data_prices.rs  test_initialize_data_accounts.rs  test_program_exist.rs  test_utils.rs
ix-programs/: Anchor.toml  Cargo.toml  MANIFEST.in  tsconfig.json
ix-programs/.cargo/: config.toml
ix-programs/programs/datanode/: Cargo.toml
ix-programs/programs/datanode/src/: lib.rs
ix-programs/programs/datanode/src/errors/: mod.rs
ix-programs/programs/datanode/src/indicators/: mod.rs
ix-programs/programs/datanode/tests/: test_calculate_features.rs  test_connectivity.rs  test_fetch_data_prices.rs  test_fetch_model_params.rs  test_initialize_data_accounts.rs  test_initialize_data_accounts_backup.txt  test_initialize_model_accounts.rs  test_program_exist.rs  test_utils.rs
ix-programs/programs/vaulted/: Cargo.toml
ix-programs/programs/vaulted/src/: lib.rs
ix-programs/utils/: analyze_project.sh  project_structure_analysis.txt
ix-results/: Cargo.toml  README.md
ix-results/src/: errors.rs
ix-sources/: Cargo.toml
ix-sources/src/: custom.rs  helius.rs  lib.rs  solana.rs
tests/: Cargo.toml
tests/data/: test_solana_rpc.rs
tests/sources/: test_helius_rpc.rs  test_solana_rpc.rs
(+42 files in other folders)
