[workspace]

resolver = "2"

members = [
 
  # --- Data Acquisition
  # "ix-data",
  # "ix-sources",

  # --- Solana Program
  "ix-composer",
  "ix-program",

  # --- Utils
  # "ix-results",

  # --- Usability
  # "benches",
  # "examples",
  # "tests",

]

[workspace.package]

edition = "2021"
rust-version = "1.84.1"
description = "OnChain data pipeline for indexing, parsing and computing data from DEXes"
authors = ["palisade research ltd"]

[workspace.dependencies]

anyhow = { version = "1.0.98" }
thiserror = { version = "1.0.64" }
criterion = { version = "0.5", features = ["html_reports"] }
memuse = { version = "0.2.0" }
human_bytes = { version = "0.4.1" }
toml = { version = "0.8" }
csv = { version = "1.3" }
clap = { version = "4.5", features = ["derive"] }

borsh = { version = "1.5.7" }
bs58 = { version = "0.5.1" }
hex = { version = "0.4.3" }
tokio = { version = "1.45", features = ["full"] }
futures = { version = "0.3" }
rand = { version = "0.7.3" }
regex = { version = "1.5" }
reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tch = { version = "0.20.0" }

# anchor-lang = { version = "0.31.1" }
# anchor-client = { version = "0.31.1" }
# pyth-solana-receiver-sdk = { version = "0.6.1" }
# libm = { version = "0.2.15" }
# solana-sdk = { version = "2.2.0" }
# solana-client = { version = "2.2.7" }
# solana-transaction-status = { version = "1.14" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "allow"
unreachable_code = "allow"
unreachable_patterns = "allow"
unused_variables = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
dead_code = "allow"

