[workspace]

resolver = "2"

members = [
 
  "ix-cex",
  "ix-core",
  "ix-execution",
  "ix-dex",
  "ix-results",

]

default-members = [
    "ix-core",
    "ix-cex",
    "ix-dex",
]

[workspace.package]

edition = "2021"
rust-version = "1.84.1"
description = "OnChain data pipeline for indexing, parsing and computing data from DEXes"
authors = ["palisade research ltd"]

[workspace.dependencies]
anyhow = { version = "1.0.98" }
thiserror = { version = "1.0.64" }
toml = { version = "0.8" }
csv = { version = "1.3" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "allow"
unreachable_code = "allow"
unreachable_patterns = "allow"
unused_variables = "allow"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
dead_code = "allow"

