[package]
name = "ci-program"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

ci-dojo = { path = "../ci-dojo", version = "0.0.1" }
ci-data = { path = "../ci-data", version = "0.0.1" }

thiserror = { workspace = true }
criterion = { workspace = true }
memuse = { workspace = true }
human_bytes = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }

regex = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
solana-program-test = { version = "2.2.7" }

