[package]
name = "examples"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

ix-data = { path = "../ix-data", version = "0.0.1" }
ix-composer = { path = "../ix-composer", version = "0.0.1" }
ix-program = { path = "../ix-program", version = "0.0.1" }

thiserror = { workspace = true }
criterion = { workspace = true }
human_bytes = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }

regex = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }

reqwest = { workspace = true }
solana-transaction-status = { workspace = true }

[[example]]
name = "deserialize"
path = "deserialize.rs"


