[package]
name = "ix-cex"
version = "0.0.1"
edition = "2021"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-rate-limiter = { version = "1.0", features = ["rt-tokio"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "test_binance"
path = "tests/exchanges/test_binance.rs"

[[test]]
name = "test_coinbase"
path = "tests/exchanges/test_coinbase.rs"

[[test]]
name = "test_kraken"
path = "tests/exchanges/test_kraken.rs"

