[package]
name = "ix-cex"
version = "0.0.1"
edition = "2021"
publish = false
readme = "README.md"
authors = ["palisade research ltd"]

[dependencies]

ix-results = { path = "../ix-results", version = "0.0.1" }
ix-core = { path = "../ix-core", version = "0.0.1" }

anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.13" }
futures = { version = "0.3" }
hex = { version = "0.4.3" }
hmac = { version = "0.12" }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.34", features = ["serde"] }
sha2 = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { workspace = true }
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
toml = { workspace = true }

async-rate-limiter = { version = "1.0", features = ["rt-tokio"] }
async-trait = { version = "0.1" }
url = { version = "2.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.13", features = ["lz4", "inserter", "time"] }
futures-util = { version = "0.3.31" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "cli_client"
path = "src/bin/cli_client.rs"

[[test]]
name = "test_binance"
path = "test/test_binance.rs"

[[test]]
name = "test_coinbase"
path = "test/test_coinbase.rs"

[[test]]
name = "test_kraken"
path = "test/test_kraken.rs"

[[test]]
name = "test_bybit_account"
path = "test/bybit/private/test_bybit_account.rs"

[[test]]
name = "test_bybit_trader"
path = "test/bybit/private/test_bybit_trader.rs"

[[test]]
name = "test_bybit_instrument"
path = "test/bybit/private/test_bybit_instrument.rs"

