[package]
name = "ix-core"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

ix-results = { path = "../ix-results", version = "0.0.1" }

serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
borsh-derive = { workspace = true }
bs58 = { workspace = true }
toml = { workspace = true }

