[package]
name = "ix-core"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.89.0"
edition = "2024"
authors = ["palisade research ltd"]

[dependencies]

ix-results = { path = "../ix-results", version = "0.0.1" }

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
borsh = { version = "1.5.7", features = ["derive"] }
borsh-derive = { version = "1.5.7" }
bs58 = { version = "0.5.1" }
toml = { workspace = true }

