[package]
name = "ix-database"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

ix-core = { path = "../ix-core", version = "0.0.1" }
ix-results = { path = "../ix-results", version = "0.0.1" }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4"] }
clickhouse = { version = "0.13", features = ["lz4", "inserter", "time"] }
arrow = { version = "55.2", features = ["prettyprint"] }
parquet = { version = "55.2", features = ["arrow", "async"] }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "test_clickhouse_client"
path = "test/test_clickhouse_client.rs"

