[package]
name = "ix-dex"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

# ix-results = { path = "../ix-results", version = "0.0.1" }
ix-core = { path = "../ix-core", version = "0.0.1" }

anyhow = { workspace = true }
thiserror = { workspace = true }
human_bytes = { version = "0.4.1" }
rand = { version = "0.7.3" }
toml = { workspace = true }
csv = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.45", features = ["full"] }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

regex = { version = "1.5" }
hex = { version = "0.4.3" }
borsh = { version = "1.5.7", features = ["derive"] }
bs58 = { version = "0.5.1" }

reqwest = { version = "0.12", features = ["json"] }
solana-client = { version = "2.2.18" }
solana-sdk = { version = "2.2.18" }

[[test]]
name = "test_solana_rpc"
path = "test/test_solana_rpc.rs"

