[package]
name = "ix-execution"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[[bin]]
name = "collector"
path = "src/bin/collector.rs"

[[bin]]
name = "features"
path = "src/bin/features.rs"

# [[bin]]
# name = "trader"
# path = "src/bin/trader.rs"

[dependencies]

ix-cex = { path = "../ix-cex", version = "0.0.1" }
ix-core = { path = "../ix-core", version = "0.0.1" }

clap = { version = "4.5", features = ["derive"] }
rust_decimal = { version = "1.34", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }

anyhow = { version = "1.0.98" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
clickhouse = { version = "0.13", features = ["lz4", "inserter", "time"] }
thiserror = { version = "1.0.64" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde_bytes = { version = "0.11.17" }

atelier_base = { version = "0.0.11" }
atelier_data = { version = "0.0.12" }
atelier_dcml = { version = "0.0.11" }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "test_connection"
path = "test/test_connection.rs"

[[test]]
name = "test_orderbook_data"
path = "test/test_orderbook_data.rs"
