[package]
name = "ix-results"
description = "Standardized results, errors and successes, for the interdexer project"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

thiserror = { workspace = true }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }

