[package]
name = "tests"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dev-dependencies]

ci-data = { path = "../ci-data", version = "0.0.1" }
ci-dojo = { path = "../ci-dojo", version = "0.0.1" }
ci-program = { path = "../ci-program", version = "0.0.1" }

thiserror = { workspace = true }
criterion = { workspace = true }
human_bytes = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }

regex = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }

reqwest = { workspace = true }
solana-transaction-status = { workspace = true }

[[test]]
name = "test_solana_rpc"
path = "data/test_solana_rpc.rs"

