[package]
name = "tests"
publish = false
readme = "README.md"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"
authors = ["palisade research ltd"]

[dependencies]

ix-data = { path = "../ix-data", version = "0.0.1" }
ix-sources = { path = "../ix-sources", version = "0.0.1" }
ix-composer = { path = "../ix-composer", version = "0.0.1" }
ix-program = { path = "../ix-program", version = "0.0.1" }
ix-results = { path = "../ix-results", version = "0.0.1" }

thiserror = { workspace = true }
criterion = { workspace = true }
human_bytes = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }

regex = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }

reqwest = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }

anchor-lang = { version = "0.31.1" }
anchor-client = { version = "0.31.1" }
pyth-solana-receiver-sdk = { version = "0.6.1" }
libm = {version = "0.2.15" }
solana-sdk = { version = "2.2.0" }
tokio = { version = "1.45" }
solana-client = { version = "2.2.7" }

[[test]]
name = "test_solana_rpc"
path = "sources/test_solana_rpc.rs"

[[test]]
name = "test_helius_rpc"
path = "sources/test_helius_rpc.rs"

