[package]
name = "datanode"
description = "OnChain Data Node"
version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "datanode"

[dependencies]
anchor-lang = { version = "0.31.1" }
pyth-solana-receiver-sdk = { version = "0.6.1" }
libm = { version = "0.2.15" }

[dev-dependencies]
anchor-lang = { version = "0.31.1" }
anchor-client = { version = "0.31.1" }
solana-sdk = { version = "2.2.18" }
solana-client = { version = "2.2.18" }

tokio = { version = "1.45" }
toml = { version = "0.8" }

datanode = { path = "../datanode" }

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []

[lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "allow"
unreachable_code = "deny"
unreachable_patterns = "deny"
dead_code = "allow"
unused_variables = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

# ---------------------------------------------------------------------------- Tests -- #
# ---------------------------------------------------------------------------- ----- -- #

[[test]]
name = "connectivity"
path = "tests/test_connectivity.rs"

[[test]]
name = "program_exists"
path = "tests/test_program_exist.rs"

[[test]]
name = "initialize_model_accounts"
path = "tests/test_initialize_model_accounts.rs"

[[test]]
name = "initialize_data_accounts"
path = "tests/test_initialize_data_accounts.rs"

[[test]]
name = "fetch_model_params"
path = "tests/test_fetch_model_params.rs"

[[test]]
name = "fetch_price"
path = "tests/test_fetch_data_prices.rs"

[[test]]
name = "calculate_features"
path = "tests/test_calculate_features.rs"

